--- a/rapport/scripts.tex
+++ b/rapport/scripts.tex
@@ -4,3 +4,6 @@
 \lstinputlisting[style=logstash,label={lst:scriptkibanaservice},caption={Service simple pour kibana}]{../code/kibana/kibana.service}
 Le chemin de l'application est là à titre indicatif, \ipath{/usr/local/bin} est plus 
 indiqué, par exemple.
+
+
+\lstinputlisting[style=logstash,label={lst:scriptfinal},caption={Script de configuration général coté server central}]{../code/logstash/logstashfinal.conf}
